Add staff accounts and password recovery
